--- a/src/.env
+++ b/src/.env
@@ -1,5 +1,4 @@
 PORT=8080
-MONGODB_URL=mongodb+srv://tomasmagnin:wRHD9t0bpXzg74iX@backendcoder.tsh7jee.mongodb.net/ecommerce?retryWrites=true&w=majorityz
+MONGODB_URL=mongodb+srv://tomasmagnin:wRHD9t0bpXzg74iX@backendcoder.tsh7jee.mongodb.net/ecommerce?retryWrites=true&w=majority
 CLIENT_ID=Iv1.14fd17021eeefa0e
 CLIENT_SECRET=10e396c8f186582c19c7c03267f2dea2f198da49
-MONGOOSE_API_KEY= ''
